src/parse/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { ast: peg$parseast },
      peg$startRuleFunction  = peg$parseast,

      peg$c0 = function(statement) {
        return statement;
      },
      peg$c1 = /^[\n\r]/,
      peg$c2 = peg$classExpectation(["\n", "\r"], false, false),
      peg$c3 = /^[\n]/,
      peg$c4 = peg$classExpectation(["\n"], false, false),
      peg$c5 = peg$otherExpectation("whitespace"),
      peg$c6 = /^[ \t\n\r]/,
      peg$c7 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c8 = /^[ \t]/,
      peg$c9 = peg$classExpectation([" ", "\t"], false, false),
      peg$c10 = "#",
      peg$c11 = peg$literalExpectation("#", false),
      peg$c12 = peg$anyExpectation(),
      peg$c13 = "#{",
      peg$c14 = peg$literalExpectation("#{", false),
      peg$c15 = "}#",
      peg$c16 = peg$literalExpectation("}#", false),
      peg$c17 = peg$otherExpectation("special word"),
      peg$c18 = peg$otherExpectation("_"),
      peg$c19 = "_",
      peg$c20 = peg$literalExpectation("_", false),
      peg$c21 = peg$otherExpectation("case"),
      peg$c22 = "case",
      peg$c23 = peg$literalExpectation("case", false),
      peg$c24 = peg$otherExpectation("when"),
      peg$c25 = "when",
      peg$c26 = peg$literalExpectation("when", false),
      peg$c27 = peg$otherExpectation("else"),
      peg$c28 = "else",
      peg$c29 = peg$literalExpectation("else", false),
      peg$c30 = peg$otherExpectation("match"),
      peg$c31 = "match",
      peg$c32 = peg$literalExpectation("match", false),
      peg$c33 = peg$otherExpectation("do"),
      peg$c34 = "do",
      peg$c35 = peg$literalExpectation("do", false),
      peg$c36 = peg$otherExpectation("let"),
      peg$c37 = "let",
      peg$c38 = peg$literalExpectation("let", false),
      peg$c39 = peg$otherExpectation("fn"),
      peg$c40 = "fn",
      peg$c41 = peg$literalExpectation("fn", false),
      peg$c42 = peg$otherExpectation("in"),
      peg$c43 = "in",
      peg$c44 = peg$literalExpectation("in", false),
      peg$c45 = peg$otherExpectation("end"),
      peg$c46 = "end",
      peg$c47 = peg$literalExpectation("end", false),
      peg$c48 = /^[a-zA-Z_]/,
      peg$c49 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c50 = /^[a-zA-Z_0-9]/,
      peg$c51 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
      peg$c52 = peg$otherExpectation("name"),
      peg$c53 = function(first, rest) {
          return {
            type: "name",
            name: [first].concat(rest || []).join(""),
            location: location()
          };
        },
      peg$c54 = "=",
      peg$c55 = peg$literalExpectation("=", false),
      peg$c56 = "->",
      peg$c57 = peg$literalExpectation("->", false),
      peg$c58 = /^[+\-*\/><=%!|&|\^|~?]/,
      peg$c59 = peg$classExpectation(["+", "-", "*", "/", ">", "<", "=", "%", "!", "|", "&", "|", "^", "|", "~", "?"], false, false),
      peg$c60 = peg$otherExpectation("operator"),
      peg$c61 = function(chars) {
        return {
          type: "name",
          name: chars.join(""),
          location: location()
        };
      },
      peg$c62 = function() {
        return {
          type: "skip",
          location: location()
        };
      },
      peg$c63 = peg$otherExpectation("undefined"),
      peg$c64 = "undefined",
      peg$c65 = peg$literalExpectation("undefined", false),
      peg$c66 = function() {
        return {
          type: "undefined",
          location: location()
        };
      },
      peg$c67 = peg$otherExpectation("null"),
      peg$c68 = "null",
      peg$c69 = peg$literalExpectation("null", false),
      peg$c70 = function() {
        return {
          type: "null",
          location: location()
        };
      },
      peg$c71 = peg$otherExpectation("false"),
      peg$c72 = "false",
      peg$c73 = peg$literalExpectation("false", false),
      peg$c74 = function() {
        return {
          type: "false",
          location: location()
        };
      },
      peg$c75 = peg$otherExpectation("true"),
      peg$c76 = "true",
      peg$c77 = peg$literalExpectation("true", false),
      peg$c78 = function() {
        return {
          type: "true",
          location: location()
        };
      },
      peg$c79 = ".",
      peg$c80 = peg$literalExpectation(".", false),
      peg$c81 = /^[1-9]/,
      peg$c82 = peg$classExpectation([["1", "9"]], false, false),
      peg$c83 = /^[eE]/,
      peg$c84 = peg$classExpectation(["e", "E"], false, false),
      peg$c85 = "-",
      peg$c86 = peg$literalExpectation("-", false),
      peg$c87 = "+",
      peg$c88 = peg$literalExpectation("+", false),
      peg$c89 = "0",
      peg$c90 = peg$literalExpectation("0", false),
      peg$c91 = peg$otherExpectation("number"),
      peg$c92 = function() {
        return {
          type: "number",
          value: text(),
          location: location()
        };
      },
      peg$c93 = "\"",
      peg$c94 = peg$literalExpectation("\"", false),
      peg$c95 = "\\",
      peg$c96 = peg$literalExpectation("\\", false),
      peg$c97 = "/",
      peg$c98 = peg$literalExpectation("/", false),
      peg$c99 = "b",
      peg$c100 = peg$literalExpectation("b", false),
      peg$c101 = function() { return "\b"; },
      peg$c102 = "f",
      peg$c103 = peg$literalExpectation("f", false),
      peg$c104 = function() { return "\f"; },
      peg$c105 = "n",
      peg$c106 = peg$literalExpectation("n", false),
      peg$c107 = function() { return "\n"; },
      peg$c108 = "r",
      peg$c109 = peg$literalExpectation("r", false),
      peg$c110 = function() { return "\r"; },
      peg$c111 = "t",
      peg$c112 = peg$literalExpectation("t", false),
      peg$c113 = function() { return "\t"; },
      peg$c114 = "u",
      peg$c115 = peg$literalExpectation("u", false),
      peg$c116 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
              },
      peg$c117 = function(sequence) { return sequence; },
      peg$c118 = /^[ -!#-[\]-\u10FFFF]/,
      peg$c119 = peg$classExpectation([[" ", "!"], ["#", "["], ["]", "\u10FF"], "F", "F"], false, false),
      peg$c120 = /^[0-9]/,
      peg$c121 = peg$classExpectation([["0", "9"]], false, false),
      peg$c122 = /^[0-9a-f]/i,
      peg$c123 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),
      peg$c124 = peg$otherExpectation("string"),
      peg$c125 = function(chars) {
        return {
          type: "string",
          value: chars.join(""),
          location: location()
        };
      },
      peg$c126 = peg$otherExpectation("list"),
      peg$c127 = "[",
      peg$c128 = peg$literalExpectation("[", false),
      peg$c129 = ",",
      peg$c130 = peg$literalExpectation(",", false),
      peg$c131 = function(first, item) { return item; },
      peg$c132 = function(first, rest) { return [first].concat(rest); },
      peg$c133 = "]",
      peg$c134 = peg$literalExpectation("]", false),
      peg$c135 = function(items) {
          return {
            type: "list",
            items: items || [],
            location: location()
          };
        },
      peg$c136 = ":",
      peg$c137 = peg$literalExpectation(":", false),
      peg$c138 = function(key, value) {
        return {
          key,
          value
        };
      },
      peg$c139 = function(key) {
        return {
          key,
          value: key
        };
      },
      peg$c140 = peg$otherExpectation("map"),
      peg$c141 = "{",
      peg$c142 = peg$literalExpectation("{", false),
      peg$c143 = "}",
      peg$c144 = peg$literalExpectation("}", false),
      peg$c145 = function(items) {
          return {
            type: "map",
            items: items || [],
            location: location()
          };
        },
      peg$c146 = function(typeSignature) {
        return typeSignature;
      },
      peg$c147 = function(name, typeSignature) {
        return {
          ...name,
          typeSignature
        };
      },
      peg$c148 = "(",
      peg$c149 = peg$literalExpectation("(", false),
      peg$c150 = function(first, arg) { return arg; },
      peg$c151 = ")",
      peg$c152 = peg$literalExpectation(")", false),
      peg$c153 = function(args) {
        return args || [];
      },
      peg$c154 = function(args, resTypeSignature, body) {
        return {
          type: "function",
          args,
          body,
          resTypeSignature,
          location: location()
        };
      },
      peg$c155 = function(condition, value) {
        return {
          condition,
          value
        };
      },
      peg$c156 = function(otherwise) {
        return otherwise;
      },
      peg$c157 = function(branch) { return branch; },
      peg$c158 = function(branches, otherwise) {
        return {
          type: "case",
          branches,
          otherwise,
          location: location()
        };
      },
      peg$c159 = function(first, pattern) { return pattern; },
      peg$c160 = function(patterns, value) {
        return {
          patterns,
          value
        };
      },
      peg$c161 = function(first, name) { return name; },
      peg$c162 = function(names, branch) { return branch; },
      peg$c163 = function(names, branches, otherwise) {
        for(let { patterns, location } of branches) {
          if (patterns.length !== names.length) {
            error("Wrong amount of patterns", patterns[0].location);
          }
        }
        return {
          type: "match",
          names,
          branches,
          otherwise,
          location: location()
        };
      },
      peg$c164 = function(name, typeSignature, value) {
        return {
          type: "definition",
          kind: "constant",
          name,
          value,
          typeSignature,
          location: location()
        };
      },
      peg$c165 = function(name, args, resTypeSignature, body) {
        return {
          type: "definition",
          kind: "function",
          name,
          args,
          body,
          resTypeSignature,
          location: location()
        };
      },
      peg$c166 = function(definition) { return definition; },
      peg$c167 = function(definitions, body) {
        return {
          type: "scope",
          definitions,
          body,
          location: location()
        };
      },
      peg$c168 = peg$otherExpectation("sub-expression"),
      peg$c169 = function(expression) {
        return expression;
      },
      peg$c170 = function(operator, operand) {
        return {
          type: "call",
          callee: operator,
          args: [operand],
          location: location()
        };
      },
      peg$c171 = function(callee, args) { return args; },
      peg$c172 = function(callee, chain) {
        return chain.reduce((callee, args) => ({
          type: "call",
          callee,
          args,
          location: callee.location
        }), callee);
      },
      peg$c173 = function(first, operator, right) { return { operator, right }; },
      peg$c174 = function(first, rest) {
        return rest.reduce(
          (left, { operator, right }) => ({
            type: "call",
            callee: operator,
            args: [left, right],
            location: operator.location
          }),
          first);
        },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseast() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsestatement();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenl() {
    var s0;

    if (peg$c1.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s0 === peg$FAILED) {
      if (peg$c3.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$c6.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parsecomment();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$c6.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 === peg$FAILED) {
        s1 = peg$parsecomment();
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parse__() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$c8.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s1 === peg$FAILED) {
      s1 = peg$parsecomment();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$c8.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s1 === peg$FAILED) {
        s1 = peg$parsecomment();
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parseoneLineComment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 35) {
      s1 = peg$c10;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      s5 = peg$parsenl();
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = void 0;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parsenl();
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = void 0;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsemultilineComment() {
    var s0, s1, s2, s3, s4, s5;
